--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -1,13 +1,3 @@
-@include "#{ENV['FLUENTD_SYSTEMD_CONF'] || 'systemd'}.conf"
 @include "#{ENV['FLUENTD_PROMETHEUS_CONF'] || 'prometheus'}.conf"
-@include conf.d/*.conf
+@include /etc/fluent/config.d/*.conf
 
-<match **>
-  @type forward
-  @id out_fwd
-  @log_level info
-  <server>
-    host "#{ENV['FLUENT_FOWARD_HOST']}"
-    port "#{ENV['FLUENT_FOWARD_PORT']}"
-  </server>
-</match>
