remove prometheus.conf

--- a/conf/fluent.conf
+++ b/conf/fluent.conf
@@ -1,3 +1,3 @@
-@include "#{ENV['FLUENTD_PROMETHEUS_CONF'] || 'prometheus'}.conf"
+# @include "#{ENV['FLUENTD_PROMETHEUS_CONF'] || 'prometheus'}.conf"
 @include /etc/fluent/config.d/*.conf
 
